--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ html {
     min-height: 100vh;
     display: grid;
     place-items: center;
-    background-color: hsl(26, 73%, 22%);
+    background-color:rgb(36, 34, 34);
 }
 
 .inner-div{
     width: 40vw;
-    background-color: #e0c28d;
+    background-color: rgb(241, 241, 70);
     padding: 3rem 8rem;
     border-radius: 1rem;
     box-shadow: 0 1rem 1rem -0.7rem rgba(0, 0, 0,0.4);
@@ -50,16 +50,16 @@ input {
     border:none;
     text-transform: uppercase;
     color: #fff;
-    background-color: #da9916;
+    background-color: #403d38;
     margin-top: 4rem;
     cursor: pointer;
 }
 #submit:hover {
-    background-color: #815309;
+    background-color: #161410;
 }
 
 #showScore {
-    background-color: #dfe6e9;
+    background-color: rgb(62, 56, 56);
     margin-top: 3rem;
     padding:3rem 4rem;
     box-shadow: 0 1rem 1rem -0.7rem rgba(0,0,0,0.4);
@@ -72,12 +72,12 @@ input {
 
 #showScore .btn{
     margin-top: 2rem;
-    background-color: #55efc4;
+    background-color: rgb(240, 240, 41);
     color:#2d3436;
 }
 
 #showScore .btn:hover{
-    background-color: #00b894;
+    background-color: #f7f74b;
     color:#fff;
 }
 
